--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  font-family: "Parkinsans", sans-serif;;
   
+}
+
+a {
+  color: #000;
 }
