--- a/src/pages/cadastrar/cadastrar.css
+++ b/src/pages/cadastrar/cadastrar.css
@@ -28,8 +28,8 @@ form {
   display: flex;
   gap: 20px;
   margin-bottom: 20px;
+  flex-direction: column;
 }
-
 .button-cadastrar {
   background-color: #2E7D32;
   color: #fff;
