--- a/src/pages/cadastrar/cadastrar.css
+++ b/src/pages/cadastrar/cadastrar.css
@@ -2,6 +2,9 @@
   height: 100vh;
   width: 100%;
   background: #E6F7E9;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .box-form {
@@ -9,13 +12,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  min-width: 500px;
+  width: 700px;
+  height: 100vh;
 }
 
 #name, #email, #password {
   width: 100%;
+  max-width: 500px;
   border-radius: 10px;
   height: 50px;
   font-size: 20px;
@@ -23,36 +26,46 @@
   border: 1px solid gray;
 }
 
-form {
-  width: 500px;
+.form-cadastrar {
+  width: 700px;
+  height: 400px;
   display: flex;
-  gap: 20px;
   margin-bottom: 20px;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border:  2px solid #2E7D32;
+  border-radius: 20px;
+  background-color: #c2dfc8;
 }
 .button-cadastrar {
   background-color: #2E7D32;
   color: #fff;
   font-size: 20px;
-  height: 40px;
+  height: 50px;
   border-radius: 10px;
   outline: none;
   border: none;
+  width: 100%;
+  max-width: 500px;
+  margin-top: 20px;
 }
 
 #logar {
+  margin-top: 20px;
   font-weight: 400;
   font-size: 18px;
 }
 
 /*Tratamentos*/
 
-.okText {
-  color: #000;
+.okText-cadastrar {
+  color: transparent;
   font-size: 14px;
   font-weight: 300;
   cursor: default;
-  display: none;
+  width: 500px;
+  text-align: start;
 }
 
 .errorEmptyText {
