--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -2,20 +2,23 @@
   height: 100vh;
   width: 100%;
   background: #E6F7E9;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.box-form {
+.box-form-login {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  min-width: 500px;
+  width: 700px;
+  height: 100vh;
 }
 
 #name, #email, #password {
   width: 100%;
+  max-width: 500px;
   border-radius: 10px;
   height: 50px;
   font-size: 20px;
@@ -23,37 +26,47 @@
   border: 1px solid gray;
 }
 
-form {
-  width: 500px;
+.form-login {
+  width: 700px;
+  height: 300px;
   display: flex;
-  gap: 20px;
   margin-bottom: 20px;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border:  2px solid #2E7D32;
+  border-radius: 20px;
+  background-color: #c2dfc8;
 }
 
 .button-logar {
   background-color: #2E7D32;
   color: #fff;
   font-size: 20px;
-  height: 40px;
+  height: 50px;
   border-radius: 10px;
   outline: none;
   border: none;
+  width: 100%;
+  max-width: 500px;
+  margin-top: 20px;
 }
 
 #cadastrar {
+  margin-top: 20px;
   font-weight: 400;
   font-size: 18px;
 }
 
 /*Tratamentos*/
 
-.okText {
-  color: #000;
+.okText-login {
+  color: transparent;
   font-size: 14px;
   font-weight: 300;
   cursor: default;
-  display: none;
+  width: 500px;
+  text-align: start;
 }
 
 .errorEmptyText {
@@ -61,6 +74,8 @@ form {
   font-size: 14px;
   font-weight: 300;
   cursor: default;
+  width: 500px;
+  text-align: start;
 }
 
 .errorEmptyInput {
