menu do cabeçalho

--- a/src/components/headerPrivate/headerPrivate.css
+++ b/src/components/headerPrivate/headerPrivate.css
@@ -22,17 +22,46 @@
 .userMenu {
   display: flex;
   align-items: center;
-  gap: 20px;
 }
-.menuIcon {
+
+.buttonMenu {
+  font-size: 30px;
+  color: #fff;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  background-color: transparent;
+  border: none;
+}
+
+#buttonMenuOpen {
   font-size: 50px;
 }
 
+#buttonMenuClose {
+  font-size: 50px;
+}
+
+.hidden {
+  display: none;
+}
+
 .menuHeader {
+  background-color: rgb(70, 184, 108);
+  height: calc(100% - 60px);
+  width: 200px;
+  font-size: 16px;
+  transition: .4s;
+}
+
+.open {
   position: absolute;
   right: 0;
   top: 60px;
-  background-color: rgb(70, 184, 108);
-  height: 100%;
-  width: 200px;
+}
+
+.close {
+  position: absolute;
+  right: -200px;
+  top: 60px;
 }
