--- a/src/components/headerPrivate/headerPrivate.css
+++ b/src/components/headerPrivate/headerPrivate.css
@@ -22,9 +22,13 @@
 .userMenu {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .buttonMenu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 30px;
   color: #fff;
   cursor: pointer;
