--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ a {
 }
 
 body {
-  background-color: #f0f0f0;
+  background-color: #c3f7bc;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
