--- a/src/components/logout/logout.css
+++ b/src/components/logout/logout.css
@@ -1,3 +1,17 @@
+.background-logout {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(255, 255, 255, 0);
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .logout {
   display: flex;
   align-items: center;
@@ -13,10 +27,7 @@
   color: #fff;
   padding: 20px;
 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
 }
 
 .hidden {
