--- a/src/components/sideMenu/sideMenu.css
+++ b/src/components/sideMenu/sideMenu.css
@@ -27,9 +27,49 @@
   height: 100vh;
   width: 200px;
   font-size: 16px;
-  transition: .4s;
+  transition: .3s;
   position: absolute;
   right: 0px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  padding: 10px 0 0 10px ;
+}
+
+.buttonMenuSide {
+  border: none;
+  background-color: transparent;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 600;
+  text-shadow: 0px 1px 1px #000;
+  transition: .4s;
+}
+
+.buttonMenuSide:hover {
+  transform: translateY(-2px);
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+  color: #f8f9fa;
+  cursor: pointer;
+  position: relative;
+}
+
+/* Efeito de sublinhado animado */
+.buttonMenuSide::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 0;
+  height: 2px;
+  background: #ffffff;
+  transition: width 0.4s ease-out;
+}
+
+.buttonMenuSide:hover::after {
+  width: 100%;
 }
 
 .close {
