--- a/src/components/sideMenu/sideMenu.css
+++ b/src/components/sideMenu/sideMenu.css
@@ -1,8 +1,3 @@
-.userMenu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .buttonMenu {
   display: flex;
@@ -23,7 +18,7 @@
 
 
 .menuHeader {
-  background-color: rgb(69, 184, 107);
+  background-color: var(--light-green);
   height: 100vh;
   width: 200px;
   font-size: 16px;
