--- a/src/pages/cadastrar/cadastrar.css
+++ b/src/pages/cadastrar/cadastrar.css
@@ -1,7 +1,7 @@
 .box-cadastrar {
   height: 100vh;
   width: 100%;
-  background: #E6F7E9;
+  background: var(--black);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -16,28 +16,36 @@
   height: 100vh;
 }
 
-#name, #email, #password {
-  width: 100%;
-  max-width: 500px;
-  border-radius: 10px;
-  height: 50px;
-  font-size: 20px;
-  padding-inline: 15px;
-  border: 1px solid gray;
-}
-
 .form-cadastrar {
-  width: 700px;
+  width: 600px;
   height: 400px;
   display: flex;
   margin-bottom: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border:  2px solid #2E7D32;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: #c2dfc8;
 }
+
+#name-cadastrar, #email-cadastrar, #password-cadastrar {
+  width: 100%;
+  max-width: 500px;
+  height: 50px;
+  font-size: 20px;
+  padding-inline: 15px;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid rgb(0, 110, 15);
+  outline: none;
+  color: #1f1f1f;
+}
+
+#logar {
+  color: var(--bg-200);
+}
+
+
 .button-cadastrar {
   background-color: #2E7D32;
   color: #fff;
