--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,7 +1,7 @@
 .box-logar {
   height: 100vh;
   width: 100%;
-  background: #E6F7E9;
+  background: var(--black);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -16,28 +16,37 @@
   height: 100vh;
 }
 
-#name, #email, #password {
-  width: 100%;
-  max-width: 500px;
-  border-radius: 10px;
-  height: 50px;
-  font-size: 20px;
-  padding-inline: 15px;
-  border: 1px solid gray;
-}
-
 .form-login {
-  width: 700px;
+  width: 600px;
   height: 300px;
   display: flex;
   margin-bottom: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border:  2px solid #2E7D32;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: #c2dfc8;
 }
+
+ #email-login, #password-login {
+  width: 100%;
+  max-width: 500px;
+  height: 50px;
+  font-size: 20px;
+  padding-inline: 15px;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid rgb(0, 110, 15);
+  outline: none;
+  color: #1f1f1f;
+}
+
+::-webkit-input-placeholder { /* place holder input */
+  color: var(--bg-200);
+  font-weight: 300;
+}
+
+
 
 .button-logar {
   background-color: #2E7D32;
@@ -56,6 +65,7 @@
   margin-top: 20px;
   font-weight: 400;
   font-size: 18px;
+  color: #000;
 }
 
 /*Tratamentos*/
