verificacao de email ja cadastrado

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 :root { /* Paleta de cor */
   --black: #1E1E1E;
+  --dark-green-200: #115300;
   --dark-green:#01801e;
   --medium-green: #0f7e3f; 
   --light-green: #37aa63;
