--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,3 +25,18 @@
   display: flex;
   gap: 20px;
 }
+
+.container-buttons-public button{
+  width: 90px;
+  height: 30px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  line-height: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--dark-green-200);
+  background: #fff;
+  font-weight: 700;
+}
