--- a/src/pages/cadastrar/cadastrar.css
+++ b/src/pages/cadastrar/cadastrar.css
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 
-.box-form {
+.box-form-cadastrar {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +26,7 @@
   align-items: center;
   border-radius: 10px;
   background-color: #c2dfc8;
+  position: relative;
 }
 
 #name-cadastrar, #email-cadastrar, #password-cadastrar {
@@ -39,12 +40,35 @@
   border-bottom: 2px solid rgb(0, 110, 15);
   outline: none;
   color: #1f1f1f;
+  margin-bottom: 20px;
+}
+
+#text-cadastrar-name {
+  position: absolute;
+  top: 20px;
+  left: 50px ;
+}
+
+#text-cadastrar-email {
+  position: absolute;
+  top: 90px;
+  left: 50px ;
+}
+
+#text-cadastrar-password {
+  position: absolute;
+  top: 160px;
+  left: 50px;
+}
+
+.input-cadastrar::placeholder {
+  color: rgb(71, 71, 71);
+  font-weight: 300;
 }
 
 #logar {
   color: var(--bg-200);
 }
-
 
 .button-cadastrar {
   background-color: #2E7D32;
@@ -63,12 +87,34 @@
   margin-top: 20px;
   font-weight: 400;
   font-size: 18px;
+  color: #1d1d1d;
+  position: relative;
+  transition: 0.4s;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+}
+
+#logar:hover {
+  transform: scale(1.01);
+}
+
+#logar::after {
+  content: '';
+  width: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  background: rgb(36, 170, 58);
+  transition: width 0.4s ease-out
+}
+
+#logar:hover::after {
+  width: 100%;
 }
 
 /*Tratamentos*/
-
-.okText-cadastrar {
-  color: transparent;
+.text-input-cadastrar {
+  display: none;
   font-size: 14px;
   font-weight: 300;
   cursor: default;
@@ -76,21 +122,22 @@
   text-align: start;
 }
 
-.errorEmptyText {
+.error-empty-text-cadastrar {
   color: red;
   font-size: 14px;
   font-weight: 300;
   cursor: default;
+  width: 500px;
 }
 
-.errorEmptyInput {
-  border: 1px solid red !important;
+.error-empty-input-cadastrar {
+  border: none;
+  border-bottom: 1px solid red !important;
   background: rgb(255, 193, 193);
-  color: #fff !important;
 }
 
-.errorEmptyInput::placeholder {
-  color: #fff;
+.error-empty-input-cadastrar::placeholder {
+  color: red !important;
 }
 
 .errorEmptyInput:focus {
