--- a/src/components/configs/componentsConfigs/componentsConfigs.css
+++ b/src/components/configs/componentsConfigs/componentsConfigs.css
@@ -203,13 +203,15 @@
 
 .componentPassword button {
   height: 30px;
-  width: 100%;
+  width: 50%;
   background: var(--light-green);
   border: none;
   outline: none;
   border: 1px solid #fff;
-  border-radius: 10px;
+  border-radius: 5px;
   margin-top: 20px;
+  font-weight: 500;
+  color: #fff;
 }
 
 /* Componente Exluir Conta */
