--- a/src/components/sideMenu/sideMenu.css
+++ b/src/components/sideMenu/sideMenu.css
@@ -22,9 +22,7 @@
   height: 100vh;
   width: 200px;
   font-size: 16px;
-  transition: .3s;
   position: absolute;
-  right: 0px;
 
   display: flex;
   flex-direction: column;
@@ -69,6 +67,11 @@
 
 a {
   color: #fff;
+}
+
+
+.open {
+  right: 0px;
 }
 
 .close {
