--- a/src/pages/perfil/perfil.css
+++ b/src/pages/perfil/perfil.css
@@ -17,20 +17,50 @@
   background: green;
   border: 2px solid #fff;
 }
+.perfil-info {
+  border: 1px solid #fff;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  width: 500px;
+  height: 500px;
+}
+
+.boxUserIconPerfil {
+  border: 1px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
 
 .userIconPerfil {
   width: 120px;
   border-radius: 100%;
 }
 
-.perfil-title {
-  font-size: 24px;
-  margin-top: 10px;
-}
-
-.perfil-info {
+.boxEditImageIcon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 120px;
+  height: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  border-radius: 100%;
+  opacity: 0;
+  transition: .1s;
 }
+
+.editImageIcon {
+  width: 50px;
+}
+
+.boxEditImageIcon:hover {
+  opacity: 1;
+  background: rgba(138, 138, 138, 0.288);
+}
+
