--- a/src/components/configs/componentsConfigs/componentsConfigs.css
+++ b/src/components/configs/componentsConfigs/componentsConfigs.css
@@ -4,6 +4,99 @@
   border-radius: 100%;
 }
 
+.componentAvatar {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.componentAvatar p {
+  font-size: 20px;
+  color: #fff;
+  font-weight: 800;
+}
+
+.componentAvatarBox {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+} 
+
+.componentAvatarBoxFotoAtualImage, .componentAvatarBoxfotoNovaImage {
+  border: 1px solid #000000;
+  width: 160px;
+  height: 160px;
+  border-radius: 100%;
+}
+
+.componentAvatarBoxFotoNova, .componentAvatarBoxFotoAtual {
+  text-align: center;
+  width: 200px;
+  height: 200px;
+}
+
+.componentAvatarBoxfotoNova {
+  width: 150px;
+}
+
+.componentAvatarInputBox {
+  width: 100%;
+  display: flex;
+  height: 70px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.componentAvatar button {
+  height: 30px;
+  width: 50%;
+  background: var(--light-green);
+  border: none;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  margin-top: 10px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.hidden-input {
+  opacity: 0; /* Esconde o input */
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.custom-button {
+  background: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.custom-button:hover {
+  background: #0056b3;
+}
+
+.file-name {
+  margin-left: 10px;
+  color: #666;
+}
+
 .componentName {
   width: 70%;
   height: 100%;
@@ -120,9 +213,10 @@
   outline: none;
   border: 1px solid #fff;
   border-radius: 5px;
-  margin-top: 20px;
-  font-weight: 500;
+  margin-top: 10px;
   color: #fff;
+  font-weight: 500;
+  font-size: 18px;
 }
 
 .componentEmail-legend-box {
@@ -215,12 +309,28 @@
   outline: none;
   border: 1px solid #fff;
   border-radius: 5px;
-  margin-top: 20px;
-  font-weight: 500;
+  margin-top: 10px;
   color: #fff;
+  font-weight: 500;
+  font-size: 18px;
 }
 
 /* Componente Exluir Conta */
+
+.componentDeleteAccount {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.componentDeleteAccount img {
+  width: 100px;
+  height: 100px;
+}
 
 .componentDeleteAccount p {
   font-size: 20px;
@@ -230,7 +340,7 @@
 
 .componentDeleteAccount button {
   height: 30px;
-  width: 100%;
+  width: 50%;
   background: red;
   border: none;
   outline: none;
@@ -238,6 +348,8 @@
   border-radius: 10px;
   margin-top: 20px;
   color: #fff;
+  font-weight: 500;
+  font-size: 18px;
 }
 
 /* Tratamento de erros */
