--- a/src/components/sideMenu/sideMenu.css
+++ b/src/components/sideMenu/sideMenu.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   font-size: 30px;
-  color: #fff;
+  color: var(--color-main-300);
   cursor: pointer;
   width: 60px;
   height: 60px;
@@ -18,7 +18,7 @@
 
 
 .menuHeader {
-  background-color: var(--light-green);
+  background-color: var(--color-main-300);
   height: 100vh;
   width: 200px;
   font-size: 16px;
@@ -31,11 +31,11 @@
   padding: 10px 0 0 10px ;
 }
 
-.buttonMenuSide {
+.buttonMenuSide, .buttonMenuSide a {
+  color: #fff;
   border: none;
   background-color: transparent;
   font-size: 18px;
-  color: #fff;
   font-weight: 600;
   text-shadow: 0px 1px 1px #000;
   transition: .4s;
@@ -64,11 +64,6 @@
 .buttonMenuSide:hover::after {
   width: 100%;
 }
-
-a {
-  color: #fff;
-}
-
 
 .open {
   right: 0px;
