--- a/src/pages/administrador/administrador.css
+++ b/src/pages/administrador/administrador.css
@@ -9,6 +9,8 @@
 }
 
 .user-box {
+  /* background: linear-gradient(45deg, var(--medium-green), var(--light-green)); */
+  background-color: var(--color-main-300);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -16,7 +18,6 @@
   width: 650px;
   height: 200px;
   border-radius: 10px;
-  background: linear-gradient(45deg, var(--medium-green), var(--light-green));
   color: #fff;
   font-size: 20px;
 }
@@ -35,8 +36,9 @@
   align-items: center;
 }
 
-.userIcon {
+.usersIcon {
   width: 25px;
+  border-radius: 100%;
 }
 
 .user-box-account {
