--- a/src/pages/cadastrar/cadastrar.css
+++ b/src/pages/cadastrar/cadastrar.css
@@ -1,7 +1,7 @@
 .box-cadastrar {
   height: 100vh;
   width: 100%;
-  background: var(--black);
+  background: var(--bg-main-color);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -17,6 +17,8 @@
 }
 
 .form-cadastrar {
+  background-color: var(--color-main-100);
+  border: 2px solid var(--color-main-200);
   width: 600px;
   height: 400px;
   display: flex;
@@ -25,7 +27,6 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  background-color: #c2dfc8;
   position: relative;
 }
 
@@ -37,7 +38,7 @@
   padding-inline: 15px;
   background: transparent;
   border: none;
-  border-bottom: 2px solid rgb(0, 110, 15);
+  border-bottom: 2px solid var(--color-main-400);
   outline: none;
   color: #1f1f1f;
   margin-bottom: 20px;
@@ -71,13 +72,13 @@
 }
 
 .button-cadastrar {
-  background-color: #2E7D32;
+  background-color: var(--color-main-300);
+  border: 2px solid var(--color-main-400);
   color: #fff;
   font-size: 20px;
   height: 50px;
   border-radius: 10px;
   outline: none;
-  border: none;
   width: 100%;
   max-width: 500px;
   margin-top: 20px;
@@ -104,7 +105,7 @@
   bottom: 0;
   left: 0;
   height: 2px;
-  background: rgb(36, 170, 58);
+  background: var(--color-main-400);
   transition: width 0.4s ease-out
 }
 
