--- a/src/pages/menu/menu.css
+++ b/src/pages/menu/menu.css
@@ -5,14 +5,16 @@
 }
 
 .options {
+    /* background: linear-gradient( 45deg, var(--medium-green), var(--light-green)); */
+    background-color: var(--color-main-300);
+    color: var(--text-color-white);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
     display: flex;
     align-items: center;
     justify-content: center;
     width: 500px;
     height: 200px;
-    background: linear-gradient( 45deg, var(--medium-green), var(--light-green));
     border-radius: 20px;
-    color: #fff;
     font-size: 24px;
     font-weight: 600;
 }
