--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,8 @@
 .headerPublic {
   /* background: #2E7D32; */
   background-color: var(--color-main-200);
-  color: var(--text-color-200);
+  color: var(--text-color-white);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
   display: flex;
   align-items: center;
   justify-content: center;
