--- a/src/pages/pagina-inicial/paginaInicial.css
+++ b/src/pages/pagina-inicial/paginaInicial.css
@@ -1,3 +1,11 @@
 .paginaInicial {
   height: 100vh;
 }
+
+.container-pagina-inicial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
